--- a/marvel/src/index.css
+++ b/marvel/src/index.css
@@ -56,7 +56,7 @@ p.welcome {
 }
 
 div.bg {
-  background-image: url("./media/edenwall.png");
+  background-image: url("./media/spiderwall.jpg");
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
@@ -72,7 +72,7 @@ div.bg {
 }
 
 button#continue {
-  background-color: #034694;
+  background-color: #fc1505;
   position: absolute;
   top: 50%;
   left: 20%;
@@ -82,7 +82,10 @@ button#continue {
 }
 
 button#continue:hover {
-  background-color: rgb(37, 222, 247);
+  background-color: rgb(248, 107, 107);
   color: white;
   border: 0;
+}
+
+.selectcard {
 }
