--- a/marvel/src/index.css
+++ b/marvel/src/index.css
@@ -87,6 +87,30 @@ button#continue:hover {
   border: 0;
 }
 
-.selectcard {
-  padding: 100% 100%;
+.selectCard {
+  padding-left: 2.5%;
+  padding-top: 4%;
+  width: 100%;
+  height: 50%;
+}
+
+h1.selectHero {
+  padding-top: 4%;
+  font-family: arial;
+  font-size: 230%;
+  color: white;
+  /* background-color: aqua; */
+  text-align: center;
+  padding-bottom: 2.5%;
+}
+
+div.selectpage {
+  background-color: black;
+  background-size: cover;
+  padding-bottom: 0;
+  height: 100vh;
+}
+
+.selectbutton {
+  padding-bottom: 0;
 }
