--- a/marvel/src/index.css
+++ b/marvel/src/index.css
@@ -12,17 +12,6 @@ code {
     monospace;
 }
 
-img.hazard {
-  max-width: 20%;
-  max-height: 20%;
-}
-
-img.pjanic {
-  max-width: 35%;
-  max-height: 35%;
-  background-position: 50% 50%;
-}
-
 h1.welcome {
   position: absolute;
   text-align: center;
@@ -48,7 +37,7 @@ p.welcome {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 15%;
+  padding-top: 20%;
   padding-left: 4%;
   margin: 0;
   font-family: arial;
@@ -119,4 +108,52 @@ div.selectpage {
   padding-top: 0;
   margin-top: 10%;
   text-align: center;
+}
+
+@media screen and (max-width: 760px) {
+  div.bg {
+    background-image: url("./media/spiderwall.jpg");
+    text-align: center;
+    /* height: 100vh; */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+    /* background-position: top center; */
+  }
+
+  p.welcome {
+    padding-top: 50%;
+    padding-right: 5%;
+    text-align: center;
+  }
+
+  button#continue {
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    margin: 20 20 20 20;
+    padding: 200 50 50 50;
+    border: 0;
+    text-align: center;
+  }
+
+  .selectCard {
+    /* padding-left: 0; */
+    /* padding-top: 0; */
+    padding: 5% 5% 5% 5%;
+    width: 100%;
+    height: 50%;
+  }
+
+  div.selectpage {
+    height: 100%;
+  }
+
+  .bg-dark text-white {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1%;
+    width: 1%;
+    padding-top: 100%;
+  }
 }
